--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <!-- AI Teaching Assistant -->
                 <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal">
-                    <img src="/api/placeholder/400/300" alt="AI Assistant" class="w-full h-48 object-cover">
+                    <img src="assistant.png" alt="AI Assistant" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">AI Teaching Assistant & Career Coach</h3>
                         <p class="text-gray-400 mb-4">
@@ -108,7 +108,7 @@
 
                 <!-- Metabob Code Review -->
                 <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal">
-                    <img src="/api/placeholder/400/300" alt="Metabob" class="w-full h-48 object-cover">
+                    <img src="review.png" alt="Metabob" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">AI Code Reviewer</h3>
                         <p class="text-gray-400 mb-4">
@@ -123,7 +123,7 @@
 
                 <!-- Fintech Platform -->
                 <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal">
-                    <img src="/api/placeholder/400/300" alt="Fintech" class="w-full h-48 object-cover">
+                    <img src="fintech.png" alt="Fintech" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2">Reactive Fintech Platform</h3>
                         <p class="text-gray-400 mb-4">
