--- a/index.html
+++ b/index.html
@@ -92,13 +92,15 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <!-- AI Teaching Assistant -->
-                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal">
+                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal flex flex-col h-full">
                     <img src="assistant.png" alt="AI Assistant" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">AI Teaching Assistant & Career Coach</h3>
-                        <p class="text-gray-400 mb-4">
-                            Built with LangChain, RAG pipelines, OpenAI APIs, and knowledge graphs to guide users in education and career planning.
-                        </p>
+                    <div class="p-6 flex flex-col justify-between flex-1">
+                        <div>
+                            <h3 class="text-xl font-bold mb-2">AI Teaching Assistant & Career Coach</h3>
+                            <p class="text-gray-400 mb-4">
+                                Built with LangChain, RAG pipelines, OpenAI APIs, and knowledge graphs to guide users in education and career planning.
+                            </p>
+                        </div>
                         <div class="flex gap-2">
                             <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">LangChain</span>
                             <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-sm">LLMs</span>
@@ -107,13 +109,15 @@
                 </div>
 
                 <!-- Metabob Code Review -->
-                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal">
+                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal flex flex-col h-full">
                     <img src="review.png" alt="Metabob" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">AI Code Reviewer</h3>
-                        <p class="text-gray-400 mb-4">
-                            Collaborated with researchers to enhance Python code review with ML models. Improved code quality and developer productivity.
-                        </p>
+                    <div class="p-6 flex flex-col justify-between flex-1">
+                        <div>
+                            <h3 class="text-xl font-bold mb-2">AI Code Reviewer</h3>
+                            <p class="text-gray-400 mb-4">
+                                Collaborated with researchers to enhance Python code review with ML models. Improved code quality and developer productivity.
+                            </p>
+                        </div>
                         <div class="flex gap-2">
                             <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-full text-sm">Python</span>
                             <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-full text-sm">ML</span>
@@ -122,13 +126,15 @@
                 </div>
 
                 <!-- Fintech Platform -->
-                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal">
+                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal flex flex-col h-full">
                     <img src="fintech.png" alt="Fintech" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold mb-2">Reactive Fintech Platform</h3>
-                        <p class="text-gray-400 mb-4">
-                            Developed microservices with Scala, Solr, and Kafka. Automated CI/CD pipelines with Jenkins and Docker.
-                        </p>
+                    <div class="p-6 flex flex-col justify-between flex-1">
+                        <div>
+                            <h3 class="text-xl font-bold mb-2">Reactive Fintech Platform</h3>
+                            <p class="text-gray-400 mb-4">
+                                Developed microservices with Scala, Solr, and Kafka. Automated CI/CD pipelines with Jenkins and Docker.
+                            </p>
+                        </div>
                         <div class="flex gap-2">
                             <span class="px-3 py-1 bg-red-500/20 text-red-300 rounded-full text-sm">Scala</span>
                             <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">Kafka</span>
@@ -155,6 +161,11 @@
                         View LinkedIn Profile
                     </a>
                 </p>
+                <p class="mt-2 text-sm text-gray-400">
+                <a href="https://github.com/A1SHWARYANAYAK" target="_blank" class="underline hover:text-green-300">
+                    View GitHub Profile
+                </a>
+            </p>
             </div>
         </div>
     </section>
