--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Aishwarya Nayak | AI/ML Engineer Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         .glass-effect {
             background: rgba(255, 255, 255, 0.1);
@@ -90,7 +91,6 @@
         <div class="max-w-6xl mx-auto">
             <h2 class="text-4xl font-bold text-center mb-16">Featured Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-
                 <!-- AI Teaching Assistant -->
                 <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal flex flex-col h-full">
                     <img src="assistant.png" alt="AI Assistant" class="w-full h-48 object-cover">
@@ -141,7 +141,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -157,15 +156,13 @@
                     Contact Me
                 </a>
                 <p class="mt-6 text-sm text-gray-400">
-                    <a href="https://www.linkedin.com/in/aishwarya-nayak-" target="_blank" class="underline hover:text-blue-300">
-                        View LinkedIn Profile
+                    <a href="https://www.linkedin.com/in/aishwarya-nayak-" target="_blank" class="inline-block mr-4">
+                        <i class="fab fa-linkedin fa-2x hover:text-blue-300"></i>
+                    </a>
+                    <a href="https://github.com/A1SHWARYANAYAK" target="_blank" class="inline-block">
+                        <i class="fab fa-github fa-2x hover:text-gray-400"></i>
                     </a>
                 </p>
-                <p class="mt-2 text-sm text-gray-400">
-                <a href="https://github.com/A1SHWARYANAYAK" target="_blank" class="underline hover:text-green-300">
-                    View GitHub Profile
-                </a>
-            </p>
             </div>
         </div>
     </section>
