--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <header class="min-h-screen flex items-center justify-center animated-bg">
         <div class="text-center px-4 animate__animated animate__fadeIn">
             <h1 class="text-6xl font-bold mb-6 floating">Aishwarya Nayak</h1>
-            <p class="text-2xl mb-8 opacity-90">AI/ML Engineer | Generative AI Specialist | Product-Focused Creator</p>
+            <p class="text-2xl mb-8 opacity-90">Machine Learning & Data Science Engineer | Generative AI Enthusiast | Turning Models into Real-World Solutions</p>
             <a href="#projects" class="glass-effect px-8 py-4 rounded-full font-semibold hover:bg-white hover:text-black transition-all duration-300">
                 Explore My Work
             </a>
@@ -76,12 +76,9 @@
             <h2 class="text-4xl font-bold text-center mb-12">About Me</h2>
             <div class="glass-effect p-8 rounded-2xl">
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    I'm an AI/ML Engineer and Generative AI Specialist with over 5 years of experience blending software engineering, data science, and machine learning.
-                    I specialize in building production-grade generative AI applications that drive measurable business outcomes. My work includes LLM integration,
-                    retrieval-augmented generation (RAG), and intelligent assistants using frameworks like LangChain, LlamaIndex, and OpenAI APIs.
+                    I'm a machine learning and data science engineer passionate about turning ideas into intelligent, user-focused products. With a strong foundation in software engineering and a growing specialization in generative AI, I’ve built projects that explore everything from language model integration to smart assistants using tools like LangChain, LlamaIndex, and OpenAI APIs.
                     <br><br>
-                    I'm passionate about building the future of intelligent systems and products that make people's lives better—whether through AI-driven career coaching,
-                    education, or developer tools.
+                    I’m especially excited about the intersection of AI and real-world impact—whether it’s improving how we learn, work, or build. My current focus is on creating useful, production-ready solutions with generative models, and I’m always looking to collaborate on projects that bridge research and application.
                 </p>
             </div>
         </div>
