--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <header class="min-h-screen flex items-center justify-center animated-bg">
         <div class="text-center px-4 animate__animated animate__fadeIn">
             <h1 class="text-6xl font-bold mb-6 floating">Aishwarya Nayak</h1>
-            <p class="text-2xl mb-8 opacity-90">Machine Learning & Data Science Engineer | Generative AI Enthusiast | Turning Models into Real-World Solutions</p>
+            <p class="text-2xl mb-8 opacity-90">AI / ML & Backend Engineer | 3.5+ Yrs Experience | Python, Scala, GCP, Docker | GenAI (LangChain) Specialist</p>
             <a href="#projects" class="glass-effect px-8 py-4 rounded-full font-semibold hover:bg-white hover:text-black transition-all duration-300">
                 Explore My Work
             </a>
@@ -76,9 +76,13 @@
             <h2 class="text-4xl font-bold text-center mb-12">About Me</h2>
             <div class="glass-effect p-8 rounded-2xl">
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    I'm a machine learning and data science engineer passionate about turning ideas into intelligent, user-focused products. With a strong foundation in software engineering and a growing specialization in generative AI, I’ve built projects that explore everything from language model integration to smart assistants using tools like LangChain, LlamaIndex, and OpenAI APIs.
+                    I’m an AI and Backend Engineer with 3.5+ years of experience designing and delivering scalable, intelligent systems that bridge machine learning and software engineering. I recently completed my Master’s in Data Science at SUNY Buffalo, which strengthened my expertise in advanced AI and data-driven solutions.
                     <br><br>
-                    I’m especially excited about the intersection of AI and real-world impact—whether it’s improving how we learn, work, or build. My current focus is on creating useful, production-ready solutions with generative models, and I’m always looking to collaborate on projects that bridge research and application.
+                    My skill set spans building robust backend microservices in Scala and Python to deploying cutting-edge generative AI applications using LangChain. I thrive at the intersection of research and production engineering—translating complex ML models into real-world solutions deployed on Google Cloud Platform with Docker containerization.
+                    <br><br>
+                    My passion lies in architecting systems that are not only intelligent but also reliable, maintainable, and scalable. Whether it's fine-tuning LLMs, orchestrating AI pipelines, or optimizing distributed services, I bring a hands-on, impact-driven approach.
+                    <br><br>
+                    <b>Key Technologies:</b> Python | Scala | GCP | Docker | LangChain | TensorFlow | PyTorch | Spark | Kafka
                 </p>
             </div>
         </div>
