--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aishwarya Nayak | AI/ML Engineer Portfolio</title>
+    <title>Aishwarya Nayak | AI/ML & Data Engineering Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
     <header class="min-h-screen flex items-center justify-center animated-bg">
         <div class="text-center px-4 animate__animated animate__fadeIn">
             <h1 class="text-6xl font-bold mb-6 floating">Aishwarya Nayak</h1>
-            <p class="text-2xl mb-8 opacity-90">AI / ML & Backend Engineer | 3.5+ Yrs Experience | Python, Scala, GCP, Docker | GenAI (LangChain) Specialist</p>
+            <p class="text-2xl mb-8 opacity-90">AI/ML & Backend Engineer | 3.5+ Years’ Experience | Python · Scala · GCP · SQL · Docker | GenAI & Data Engineering Specialist</p>
             <a href="#projects" class="glass-effect px-8 py-4 rounded-full font-semibold hover:bg-white hover:text-black transition-all duration-300">
                 Explore My Work
             </a>
@@ -76,14 +76,13 @@
             <h2 class="text-4xl font-bold text-center mb-12">About Me</h2>
             <div class="glass-effect p-8 rounded-2xl">
                 <p class="text-gray-300 text-lg leading-relaxed">
-                    I’m an AI and Backend Engineer with 3.5+ years of experience designing and delivering scalable, intelligent systems that bridge machine learning and software engineering. I recently completed my Master’s in Data Science at SUNY Buffalo, which strengthened my expertise in advanced AI and data-driven solutions.
-                    <br><br>
-                    My skill set spans building robust backend microservices in Scala and Python to deploying cutting-edge generative AI applications using LangChain. I thrive at the intersection of research and production engineering—translating complex ML models into real-world solutions deployed on Google Cloud Platform with Docker containerization.
-                    <br><br>
-                    My passion lies in architecting systems that are not only intelligent but also reliable, maintainable, and scalable. Whether it's fine-tuning LLMs, orchestrating AI pipelines, or optimizing distributed services, I bring a hands-on, impact-driven approach.
-                    <br><br>
-                    <b>Key Technologies:</b> Python | Scala | GCP | Docker | LangChain | TensorFlow | PyTorch | Spark | Kafka
+                   I am an AI, Data, and Backend Engineer with over 3½ years of experience architecting and delivering production-grade solutions that integrate software engineering, data engineering, and machine learning. I hold a Master’s in Data Science from SUNY Buffalo, where I honed my skills in statistical modeling, big data infrastructure, and generative AI.
                 </p>
+                <ul class="list-disc list-inside leading-relaxed">
+                <li><strong>Backend & Cloud Architecture:</strong> Microservices in Scala & Python, containerization with Docker, CI/CD automation on GCP.</li>
+                <li><strong>Data Engineering & Analytics:</strong> ETL workflows with Spark, real-time streaming via Kafka, advanced SQL data modeling.</li>
+                <li><strong>Generative AI & ML Systems:</strong> RAG pipelines with LangChain, LLM fine-tuning, OpenAI embeddings, and knowledge graphs.</li>
+              </ul>
             </div>
         </div>
     </section>
@@ -99,29 +98,15 @@
                         <div>
                             <h3 class="text-xl font-bold mb-2">AI Teaching Assistant & Career Coach</h3>
                             <p class="text-gray-400 mb-4">
-                                Built with LangChain, RAG pipelines, OpenAI APIs, and knowledge graphs to guide users in education and career planning.
+                                Designed an AI-driven assistant leveraging LangChain and OpenAI APIs, integrating knowledge graphs and retrieval-augmented generation (RAG) pipelines. Engineered scalable data ingestion workflows and graph-based data models to deliver personalized education and career guidance.
                             </p>
                         </div>
                         <div class="flex gap-2">
-                            <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">LangChain</span>
-                            <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-sm">LLMs</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Metabob Code Review -->
-                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal flex flex-col h-full">
-                    <img src="review.png" alt="Metabob" class="w-full h-48 object-cover">
-                    <div class="p-6 flex flex-col justify-between flex-1">
-                        <div>
-                            <h3 class="text-xl font-bold mb-2">AI Code Reviewer</h3>
-                            <p class="text-gray-400 mb-4">
-                                Collaborated with researchers to enhance Python code review with ML models. Improved code quality and developer productivity.
-                            </p>
-                        </div>
-                        <div class="flex gap-2">
-                            <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-full text-sm">Python</span>
-                            <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-full text-sm">ML</span>
+                              <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">Python</span>
+                              <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-sm">LangChain</span>
+                              <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-full text-sm">Data Pipelines</span>
+                              <span class="px-3 py-1 bg-red-500/20 text-red-300 rounded-full text-sm">OpenAI API</span>
+                              <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-full text-sm">Knowledge Graph</span>
                         </div>
                     </div>
                 </div>
@@ -133,15 +118,41 @@
                         <div>
                             <h3 class="text-xl font-bold mb-2">Reactive Fintech Platform</h3>
                             <p class="text-gray-400 mb-4">
-                                Developed microservices with Scala, Solr, and Kafka. Automated CI/CD pipelines with Jenkins and Docker.
+                                Built reactive microservices in Scala with real-time data pipelines powered by Kafka and Solr. Developed ETL processes for streaming and indexing financial data, enabling timely analytics and reporting. Streamlined CI/CD deployment using Docker and Jenkins.
                             </p>
                         </div>
                         <div class="flex gap-2">
-                            <span class="px-3 py-1 bg-red-500/20 text-red-300 rounded-full text-sm">Scala</span>
-                            <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">Kafka</span>
+                          <span class="px-3 py-1 bg-red-500/20 text-red-300 rounded-full text-sm">Scala</span>
+                          <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">Kafka</span>
+                          <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-full text-sm">Solr</span>
+                          <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-full text-sm">ETL</span>
+                          <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-sm">Docker</span>
                         </div>
                     </div>
                 </div>
+
+                <!-- Finance Reporting Portal -->
+                <div class="project-card glass-effect rounded-xl overflow-hidden scroll-reveal flex flex-col h-full">
+                  <img src="finance_portal.png" alt="Finance Reporting Portal" class="w-full h-48 object-cover">
+                  <div class="p-6 flex flex-col justify-between flex-1">
+                    <div>
+                      <h3 class="text-xl font-bold mb-2 text-white">Finance Reporting Portal</h3>
+                      <p class="text-gray-400 mb-4">
+                        Developed full-stack modules using Java, AngularJS, and SQL to manage and visualize financial data. Ensured code quality with JUnit, Katalon testing, SonarQube analysis, and Fortify security scans.
+                      </p>
+                    </div>
+                    <div class="flex gap-2">
+                      <span class="px-3 py-1 bg-yellow-500/20 text-yellow-300 rounded-full text-sm">Java</span>
+                      <span class="px-3 py-1 bg-blue-500/20 text-blue-300 rounded-full text-sm">AngularJS</span>
+                      <span class="px-3 py-1 bg-green-500/20 text-green-300 rounded-full text-sm">SQL</span>
+                      <span class="px-3 py-1 bg-purple-500/20 text-purple-300 rounded-full text-sm">JUnit</span>
+                      <span class="px-3 py-1 bg-pink-500/20 text-pink-300 rounded-full text-sm">Katalon</span>
+                      <span class="px-3 py-1 bg-gray-500/20 text-gray-300 rounded-full text-sm">SonarQube</span>
+                      <span class="px-3 py-1 bg-red-500/20 text-red-300 rounded-full text-sm">Fortify</span>
+                    </div>
+                  </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -151,7 +162,7 @@
             <h2 class="text-4xl font-bold mb-12">Get In Touch</h2>
             <div class="glass-effect p-8 rounded-2xl">
                 <p class="text-gray-300 mb-8">
-                    Interested in collaborating or discussing AI innovations? Let’s connect and build the future together.
+                    Let’s connect to build impactful AI and data-driven solutions together.
                 </p>
                 <a href="mailto:nayakaishwarya12@yahoo.in" class="inline-block bg-gradient-to-r from-blue-500 to-purple-600 text-white px-8 py-4 rounded-full font-semibold hover:opacity-90 transition-opacity">
                     Contact Me
